--- a/web/main.css
+++ b/web/main.css
@@ -17,6 +17,10 @@ h1, h2, h3, h4{
     margin: 0px;
     padding: 0px;
 }
+ul{
+    text-align: center;
+    font-size: 20px;
+}
 table{
     width: 750px;
     margin: auto;
