--- a/web/main.css
+++ b/web/main.css
@@ -10,6 +10,7 @@ body {
     width: 900px;
     margin: auto;
     padding-top: 50px;
+    margin-bottom: 50px;
     border: 1px solid black;
 
 }
@@ -17,6 +18,7 @@ h1, h2, h3, h4{
     text-align: center;
     margin: 0px;
     padding: 0px;
+
 }
 ul, li{
     text-align: left;
@@ -27,7 +29,7 @@ ul, li{
 table{
     width: 800px;
     margin: auto;
-    border: 1px solid black;
+
 }
 td{
     font-size: 20px;
@@ -35,12 +37,10 @@ td{
     margin: 0px;
     padding: 2px;
     text-align: left;
-    border: 1px solid black;
 }
 .divContent{
     width: 850px;
     margin: auto;
-    border: 1px solid black;
 }
 .highlight{
     font-weight: bold;
@@ -51,4 +51,6 @@ td{
     font-size: 20px;
     margin: 0px;
 }
-
+span{
+    font-size: 20px;
+}
